src/objects/Project_Site__c.object
<CustomObject>
    <fields>
        <fullName>AccountManager__c</fullName>
        <formula>Site__r.Account__r.Account_Manager__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Site__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <formula>Site__r.Address1__c</formula>
        <label>Address1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillToAddressID__c</fullName>
        <label>Bill To Address ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingContactID__c</fullName>
        <label>Billing Contact ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Site__r.City__c</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contribution__c</fullName>
        <label>Contribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Site__r.Country__c</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreditRiskRating__c</fullName>
        <formula>Site__r.Account__r.CreditRiskRating__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Risk Rating</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Default_Top_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Top Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_End__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary End</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobID__c</fullName>
        <label>Job ID</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCustomerID__c</fullName>
        <formula>Site__r.OracleCustomerID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleCustomerNumber__c</fullName>
        <formula>Site__r.OracleCustomerNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oracle Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleProjectSiteId__c</fullName>
        <externalId>true</externalId>
        <label>Oracle Project Site Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OracleSyncErrorMessage__c</fullName>
        <label>Oracle Sync Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>P</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <formula>Site__r.PostalCode__c</formula>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectSiteType__c</fullName>
        <label>Project Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipName>ProjectSites</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Segment1__c</fullName>
        <formula>Project__r.Segment1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segment1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipToAddressID__c</fullName>
        <label>Ship To Address ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <referenceTo>Site__c</referenceTo>
        <relationshipName>ProjectSites</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Site__r.State__c</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secondary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project Site</label>
    <nameField>
        <displayFormat>ProjectSite-{0000000000}</displayFormat>
        <label>Project Site Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Sites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>